--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
