VEO3 Generator implementation

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remotion/google-fonts": "^4.0.340",
     "@remotion/player": "^4.0.340",
     "@remotion/zod-types": "^4.0.375",
+    "axios": "^1.13.2",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
